@@ -22,7 +22,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import com.sun.ejte.ccl.reporter.SimpleReporterAdapter;
 
@@ -78,7 +78,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot + "/myurl"
                 + "?testcase=" + testCase + "&whichemf=" + whichEMF;
         System.out.println("opening connection to " + url);
-        HttpURLConnection conn = (HttpURLConnection) (new URL(url))
+        HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL()
                 .openConnection();
 
         int code = conn.getResponseCode();
