@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -70,8 +71,8 @@ public class WebTest {
 
     public void run() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + httpPort + contextRoot
-                          + "/protected.jsp");
+        URL url = URI.create("http://" + host  + ":" + httpPort + contextRoot
+                          + "/protected.jsp").toURL();
         System.out.println(url.toString());
         URLConnection conn = url.openConnection();
         java.util.Map fields = conn.getHeaderFields();
