@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2011, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -67,7 +68,7 @@ public class WebTest {
 
     private void invoke() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + newPort + contextRoot);
+        URL url = URI.create("http://" + host  + ":" + newPort + contextRoot).toURL();
         System.out.println("Connecting ... "+url);
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
