@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -72,8 +73,8 @@ public class WebTest {
              * has been enabled, and therefore must fail (with a 404 response
              * code) since the InvokerServlet should not have been enabled.
              */
-            url = new URL("http://" + host  + ":" + port + contextRoot
-                    + "/servlet/TestServlet");
+            url = URI.create("http://" + host  + ":" + port + contextRoot
+                    + "/servlet/TestServlet").toURL();
             System.out.println("Connecting to: " + url.toString());
             conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -87,8 +88,8 @@ public class WebTest {
              * Connect to the correct mapping, as specified in the deployment
              * descriptor. This must work.
              */
-            url = new URL("http://" + host  + ":" + port + contextRoot
-                    + "/TestServlet");
+            url = URI.create("http://" + host  + ":" + port + contextRoot
+                    + "/TestServlet").toURL();
             System.out.println("Connecting to: " + url.toString());
             conn = (HttpURLConnection) url.openConnection();
             conn.connect();
