@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -20,6 +21,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 
 import com.sun.appserv.test.util.results.SimpleReporterAdapter;
@@ -64,10 +66,10 @@ public class WebTest {
      * @return true on success, false on failure
      */
     public boolean doTestURL() throws Exception {
-        URL url = new URL("http://" + host + ":" + port
+        URL url = URI.create("http://" + host + ":" + port
             + contextRoot + "/TestServlet"
             + ";jsessionid=CFE28BD89B33B59CD7249ACBDA5B479D"
-            + ":1234");
+            + ":1234").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
