@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -57,7 +58,7 @@ public class WebTest {
 
     public void doTest1() throws Exception {
 
-        URL url = new URL("http://" + host + ":" + port + contextRoot + "/from1.jsp");
+        URL url = URI.create("http://" + host + ":" + port + contextRoot + "/from1.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -73,7 +74,7 @@ public class WebTest {
      */
     public void doTest2() throws Exception {
 
-        URL url = new URL("http://" + host + ":" + port + contextRoot + "/from2.jsp");
+        URL url = URI.create("http://" + host + ":" + port + contextRoot + "/from2.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
