@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -57,8 +58,8 @@ public class WebTest {
 
         try {
 
-            url = new URL("http://" + host  + ":" + port + contextRoot
-                    + "/jsp/test.jsp");
+            url = URI.create("http://" + host  + ":" + port + contextRoot
+                    + "/jsp/test.jsp").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -67,7 +68,7 @@ public class WebTest {
             if (responseCode != HttpURLConnection.HTTP_MOVED_TEMP) {
                 fail = true;
             } else {
-                url = new URL(conn.getHeaderField("Location"));
+                url = URI.create(conn.getHeaderField("Location")).toURL();
                 System.out.println("Redirected to: " + url.toString());
                 SSLContext ctx = SSLContext.getInstance("TLS");
                 ctx.init(null, getTrustManagers(trustStorePath), null);
