@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -48,8 +49,8 @@ public class WebTest {
 
     public void doTest() {
         try {
-            URL url = new URL("http://" + host  + ":" + port + contextRoot
-                              + "test.txt");
+            URL url = URI.create("http://" + host  + ":" + port + contextRoot
+                              + "test.txt").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
