@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2013, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -38,7 +39,7 @@ public class WebTest {
         stat.addDescription("Unit test for non blocking read and then non blocking write");
 
         try {
-            URL url = new URL("http://" + host + ":" + port + "/" + contextRoot + "/test?testname=abc&data=1");
+            URL url = URI.create("http://" + host + ":" + port + "/" + contextRoot + "/test?testname=abc&data=1").toURL();
             HttpURLConnection conn = (HttpURLConnection)url.openConnection();
             conn.setRequestMethod("POST");
             conn.setRequestProperty("Content-type", "text/plain; charset=utf-8");
