@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -52,7 +53,7 @@ public class WebTest {
             String url = "http://" + host + ":" + port + contextRoot
                 + "/SetHeadersServlet";
             HttpURLConnection conn = (HttpURLConnection)
-                (new URL(url)).openConnection();
+                URI.create(url).toURL().openConnection();
 
             int code = conn.getResponseCode();
             if (code != 200) {
