@@ -20,6 +20,7 @@ package org.glassfish.tests.embedded.web;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -79,7 +80,7 @@ public class EmbeddedVirtualServerHostNameTest {
         embedded.addContext(context, contextRoot);
 
         // curl -i -H 'Host: example.com' http://localhost:8080/
-        URL servlet = new URL("http://localhost:8080/"+contextRoot+"/hello");
+        URL servlet = URI.create("http://localhost:8080/"+contextRoot+"/hello").toURL();
         URLConnection yc = servlet.openConnection();
         StringBuilder sb = new StringBuilder();
         try (BufferedReader in = new BufferedReader(new InputStreamReader(yc.getInputStream()))) {
