@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2012, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -28,6 +29,7 @@ import org.glassfish.hk2.api.ServiceLocator;
 import java.io.*;
 import java.net.ConnectException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.List;
@@ -141,7 +143,7 @@ public class LazySharedServiceTest {
     }
 
     private void get(String urlStr, String result) throws Exception {
-        URL url = new URL(urlStr);
+        URL url = URI.create(urlStr).toURL();
         URLConnection yc = url.openConnection();
         System.out.println("\nURLConnection [" + yc + "] : ");
         BufferedReader in = new BufferedReader(new InputStreamReader(
@@ -302,7 +304,7 @@ public class LazySharedServiceTest {
         HttpURLConnection huc;
 
         try {
-            URL u = new URL(urlString);
+            URL u = URI.create(urlString).toURL();
             huc =  (HttpURLConnection)  u.openConnection();
             huc.setRequestMethod("GET");
             huc.connect();
