@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -17,6 +18,7 @@
 import com.meterware.httpunit.*;
 import util.Util;
 import util.JSSE;
+import java.net.URI;
 import java.net.URL;
 
 import com.sun.ejte.ccl.reporter.SimpleReporterAdapter;
@@ -58,7 +60,7 @@ public class AdminGUITest {
                 URL = "http://"+host+":"+port;
             } else {
                 System.out.println("GOING TO EXECUTE EE TEST CASE");
-                JSSE jse = new JSSE(new URL("https", host, Integer.parseInt(port), "/index.jsf"));
+                JSSE jse = new JSSE(new URI("https", null, host, Integer.parseInt(port), "/index.jsf", null, null).toURL());
                 jse.trustAnyServerCertificate();
                 URL = "https://"+host+":"+port;
             }
